# xlgyro

./: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  README  README.md  env.sh  env.src  tags_gen.sh  tags_gen.src  toolchain.cmake  xlgyro.ioc
Drivers/LSM9DS1/inc/: lsm9ds1.h
Drivers/LSM9DS1/src/: CMakeLists.txt  lsm9ds1.c
Drivers/STM32F4xx_HAL_Driver/Src/: CMakeLists.txt
Inc/: crc16.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Src/: CMakeLists.txt  crc16.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
Startup/: CMakeLists.txt
